<resources>
        <string name="app_name">Pothole</string>
        <string name="tvEmail">Email</string>
        <string name="editTextPassword">Password</string>
        <string name="forgotPass">Forgot password</string>
        <string name="sign_in_button">Sign in</string>
        <string name="tvOR">OR</string>
        <string name="log_in_button_gg">Log in with Google</string>
        <string name="tvDHA">Don\'t have an account?</string>
        <string name="signUp">Sign Up</string>
        <string name="imageViewDescription">app icon</string>
        <string name="fullname">Fullname</string>
        <string name="confirm_password">Confirm password</string>
        <string name="sign_up">Sign up</string>
        <string name="already_have_an_account">Already have an account?</string>
        <string name="pothole_detail">Pothole detail</string>
        <string name="profile_picture">profile picture</string>
        <string name="potholes_detected">potholes detected</string>
        <string name="distances_traveled">Distances traveled</string>
        <string name="distribution_potholes_by_severity_level">Distribution potholes by severity level</string>
        <string name="back_button">back button</string>
        <string name="pothole_img">Pothole img</string>
        <string name="score">Score</string>
        <string name="low">\ \ Low</string>
        <string name="high">\ \ High</string>
        <string name="medium">\ \ Medium</string>
        <string name="detected_potholes">Detected potholes</string>
        <string name="report">Report</string>
        <string name="user_online">User online</string>
        <string name="notifications_icon">Notifications Icon</string>
        <string name="report_icon">Report Icon</string>
        <string name="profile">Profile</string>
        <string name="change_password">Change password</string>
        <string name="reward">Reward</string>
        <string name="language">Language</string>
        <string name="log_out">Log out</string>
        <string name="home">Home</string>
        <string name="next">Next</string>
        <string name="personal_information">Personal information</string>
        <string name="reset_your_password">Reset your password</string>
        <string name="please_enter_your_current_password_to_verify">Please enter your current password to verify</string>
        <string name="please_enter_your_new_password">Please enter your new password</string>
        <string name="update_password">Update password</string>
        <string name="set_your_password">Set your password</string>
        <string name="setting">Setting</string>
        <string name="do_you_want_to_log_out">Do you want to log out?</string>
        <string name="cancel">Cancel</string>
        <string name="resend_mail">Resend mail</string>
        <string name="default_web_client_id">203414613649-jg8ritueegk47se9dio12fe8btafs97e.apps.googleusercontent.com</string>
        <string name="phat_hien_luc">Create at</string>
        <string name="notification">Notification</string>
        <string name="account">Account</string>
        <string name="english">English</string>
        <string name="update">Update</string>
        <string name="system_settings">system settings</string>
        <string name="sign_in_cap">SIGN IN</string>
        <string name="password">Password</string>
    <string name="close">Close</string>
        <string name="pothole_details">Pothole Details</string>
        <string name="location">Location</string>
        <string name="severity">Severity</string>
        <string name="detection_time">Detection Time</string>


</resources>