<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Signin">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/sign_in_button"
            android:clickable="true"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="left|center_vertical"
            android:layout_marginHorizontal="10dp"
            android:id="@+id/back"
            android:clickable="true"
            android:src="@drawable/back"/>
    </FrameLayout>

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/imageViewDescription"
        android:src="@drawable/uit" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="username"
        android:background="@drawable/coner"
        android:drawableLeft="@drawable/lock"
        android:drawablePadding="15dp"
        android:hint="@string/tvEmail"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:drawablePadding="15dp"
        android:background="@drawable/coner"
        android:drawableLeft="@drawable/lock"
        android:hint="@string/editTextPassword"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/forgotPass"
        android:textColor="#003a8c"
        android:textSize="16sp" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/coner1"
        android:backgroundTint="#003a8c"
        android:text="@string/sign_in_button"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/tvOR"
        android:textColor="@android:color/darker_gray" />

    <Button
        android:id="@+id/google_sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/coner"
        android:paddingStart="12dp"
        android:contentDescription="@string/log_in_button_gg"
        android:drawableLeft="@drawable/gg_icon"
        android:drawableRight="@drawable/ic_arrow_tien"
        android:text="@string/log_in_button_gg"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvDHA"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/signUp"
            android:textColor="#003a8c"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>
