<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="16dp"

    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- TextView Title -->
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            android:textColor="@color/blue"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_you_want_to_log_out"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <!-- LinearLayout for Buttons -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp">

            <!-- Cancel Button -->
            <com.google.android.material.button.MaterialButton
                android:theme="@style/Theme.MaterialComponents.Light.NoActionBar.Bridge"
                android:id="@+id/btnCancel"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:outlineProvider="background"
                android:background="@drawable/coner"
                android:backgroundTint="@null"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/blue"
                android:textSize="13sp"
                android:textStyle="bold"
                android:layout_marginEnd="8dp" />

            <!-- Logout Button -->
            <Button
                android:id="@+id/btnLogout"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue"
                android:text="@string/log_out"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
